# AOC2024

./: Cargo.toml  README.md
.github/workflows/: check.yml
aoc-bevy-render/: Cargo.toml
aoc-bevy-render/src/: app.rs  renderer.rs
aoc-bevy-render/src/renderer/: camera.rs  ui.rs
aoc-bevy-render/src/renderer/ui/: day_buttons.rs  part_buttons.rs  style.rs
aoc-core/: Cargo.toml
aoc-core/src/: collections.rs  lib.rs  puzzle.rs  solution_collection.rs  solution_wrapper.rs
aoc-core/src/collections/: hash_grid.rs
aoc-core/src/puzzle/: render_components.rs
aoc-core/src/tools/: grid.rs
aoc-core/src/tools/grid/: grid_printer.rs
aoc-procmacro/: Cargo.toml
aoc-procmacro/src/: aoc_puzzle.rs  lib.rs
aoc-procmacro/src/aoc_puzzle/: attributes.rs
aoc-solutions-2024/: Cargo.toml
aoc-solutions-2024/benches/: benchmarks.rs
aoc-solutions-2024/src/: lib.rs  main.rs  solutions.rs
aoc-solutions-2024/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  template.rs
