[workspace]
resolver = "2"
members = [
    "aoc-bevy-render",
    "aoc-core",
    "aoc-procmacro",
    "aoc-procmacro-internals",
    "aoc-solutions-2024",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "AoC 2024 solutions"
repository = "github.com/Daanoz/AOC2024"
homepage = "https://github.com/Daanoz/AOC2024"
authors = ["github.com/Daanoz"]
license = "MIT"
